--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
 <body>
   <div class="container">
-
     <nav class="nav">
       <a href="./" aria-current="page">Nazar's Toolbox</a>
       <div class="navlinks">
@@ -23,7 +22,7 @@
     <header>
       <h1>Nazar Toolbox</h1>
       <p class="sub">
-        A collection of engineering calculators and layout helpers I created to help me speed up my design work and to better understand the math and practice some coding in my free time.
+        A collection of calculators and layout helpers I created to help me speed up my design work and to better understand the math and practice some coding in my free time.
       </p>
     </header>
 
@@ -61,3 +60,4 @@
   </div>
 </body>
 </html>
+
