--- a/fla-va-mca/index.html
+++ b/fla-va-mca/index.html
@@ -50,7 +50,7 @@
         
         <div class="field">
           <label for="factor">MCA Factor</label>
-          <input id="factor" type="number" step="0.01" value="1.25" />
+          <input id="factor" type="number" step="0.01" placeholder="e.g. 1.25" />
           <div class="help" id="factorHelp">Used for MCA ↔ FLA (MCA = Factor × FLA).</div>
         </div>
         
@@ -726,6 +726,7 @@
 </script>
 </body>
 </html>
+
 
 
 
