--- a/fla-va-mca/index.html
+++ b/fla-va-mca/index.html
@@ -22,8 +22,7 @@
     <header>
       <h1>FLA / VA / kW / MCA Calculator</h1>
       <div class="subhead">
-        Bidirectional solver. Enter any combination of values — as soon as enough info is provided,
-        the calculator fills the rest. <span class="mono">Last edited wins</span>.
+        Bidirectional solver.
       </div>
     </header>
 
@@ -726,6 +725,7 @@
 </script>
 </body>
 </html>
+
 
 
 
