--- a/index.html
+++ b/index.html
@@ -10,18 +10,21 @@
 
 <body>
   <div class="container">
+
     <nav class="nav">
       <a href="./" aria-current="page">Nazar's Toolbox</a>
       <div class="navlinks">
         <a href="./light-spacing/">Light Spacing</a>
         <a href="./fla-va-mca/">FLA / VA / MCA</a>
+        <a href="./case-converter/">Case Converter</a>
+        <span class="disabledLink">(Future)</span>
       </div>
     </nav>
 
     <header>
       <h1>Nazar Toolbox</h1>
       <p class="sub">
-        A collection of calculators and layout helpers I created to help me speed up my design work, to better understand the math, and practice some coding in my free time.
+        A collection of engineering calculators and layout helpers I created to help me speed up my design work and to better understand the math and practice some coding in my free time.
       </p>
     </header>
 
@@ -43,7 +46,17 @@
           <span class="tag">Electrical</span>
         </div>
         <p class="desc">
-          Bidirectional solver for VA, kVA, kW, FLA, and MCA.
+          Bidirectional solver for VA, kW, FLA, and MCA. Enter enough fields and it auto-calculates the rest.
+        </p>
+      </a>
+
+      <a class="cardLink" href="./case-converter/">
+        <div class="titleRow">
+          <h2 class="toolTitle">Case Converter</h2>
+          <span class="tag">Text</span>
+        </div>
+        <p class="desc">
+          Convert text to UPPERCASE, lowercase, Title Case, Sentence case, and more. Includes quick copy.
         </p>
       </a>
 
@@ -59,6 +72,3 @@
   </div>
 </body>
 </html>
-
-
-
