--- a/fla-va-mca/index.html
+++ b/fla-va-mca/index.html
@@ -5,17 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>FLA / VA / kW / MCA Calculator</title>
   <meta name="robots" content="noindex, nofollow" />
-  <link rel="stylesheet" href="../styles/common.css">
+  <link rel="stylesheet" href="./styles/common.css">
 </head>
 
 <body>
   <div class="container">
 
     <nav class="nav">
-      <a href="../">Nazar's Toolbox</a>
+      <a href="./" aria-current="page">Nazar's Toolbox</a>
       <div class="navlinks">
-        <a href="../light-spacing/">Light Spacing</a>
-        <a href="../fla-va-mca/" aria-current="page">FLA / VA / MCA</a>
+        <a href="./light-spacing/">Light Spacing</a>
+        <a href="./fla-va-mca/" aria-current="page">FLA / VA / MCA</a>
+        <a href="./case-converter/">Case Converter</a>
       </div>
     </nav>
 
@@ -725,6 +726,7 @@
 </script>
 </body>
 </html>
+
 
 
 
