--- a/case-converter/index.html
+++ b/case-converter/index.html
@@ -12,7 +12,7 @@
   <div class="container">
 
     <nav class="nav">
-      <a href="./">Nazar's Toolbox</a>
+      <a href="../">Nazar's Toolbox</a>
       <div class="navlinks">
         <a href="../light-spacing/">Light Spacing</a>
         <a href="../fla-va-mca/">FLA / VA / MCA</a>
@@ -252,5 +252,6 @@
 </script>
 </body>
 </html>
+
 
 
