--- a/fla-va-mca/index.html
+++ b/fla-va-mca/index.html
@@ -12,7 +12,7 @@
   <div class="container">
 
     <nav class="nav">
-      <a href="./" aria-current="page">Nazar's Toolbox</a>
+      <a href="../">Nazar's Toolbox</a>
       <div class="navlinks">
         <a href="../light-spacing/">Light Spacing</a>
         <a href="../fla-va-mca/" aria-current="page">FLA / VA / MCA</a>
@@ -726,6 +726,7 @@
 </script>
 </body>
 </html>
+
 
 
 
