--- a/case-converter/index.html
+++ b/case-converter/index.html
@@ -23,7 +23,7 @@
     <header>
       <h1>Case Converter</h1>
       <div class="subhead">
-        Paste text → convert case → copy. 
+        Paste text → convert case → copy.
       </div>
     </header>
 
@@ -56,8 +56,7 @@
           <div class="help">Optional cleanup.</div>
         </div>
 
-        <div class="field">
-        </div>
+        <div class="field"></div>
       </div>
 
       <div class="grid2">
@@ -110,11 +109,6 @@
   const charCountEl = el("charCount");
   const wordCountEl = el("wordCount");
   const lineCountEl = el("lineCount");
-  const statusEl = el("statusText");
-
-  function setStatus(msg) {
-    statusEl.textContent = msg || "Ready.";
-  }
 
   function normalizeWhitespace(s, mode) {
     if (!s) return "";
@@ -200,22 +194,20 @@
     updateCounts(raw);
 
     const cleaned = normalizeWhitespace(raw, trimEl.value);
-    const out = convert(cleaned, modeEl.value);
-    outputEl.value = out;
-
-    setStatus("Ready.");
+    outputEl.value = convert(cleaned, modeEl.value);
   }
 
   el("copyBtn").addEventListener("click", async () => {
+    const btn = el("copyBtn");
+    const old = btn.textContent;
+
     try {
       await navigator.clipboard.writeText(outputEl.value || "");
-      setStatus("Copied output to clipboard.");
-      const btn = el("copyBtn");
-      const old = btn.textContent;
       btn.textContent = "Copied!";
       setTimeout(() => (btn.textContent = old), 1200);
     } catch {
-      setStatus("Copy failed. Your browser may block clipboard access.");
+      btn.textContent = "Copy failed";
+      setTimeout(() => (btn.textContent = old), 1200);
     }
   });
 
@@ -229,8 +221,3 @@
 </script>
 </body>
 </html>
-
-
-
-
-
